Fixed overflow

--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,10 @@
   :root {
     @apply font-sans;
     scroll-behavior: smooth;
+    /* overflow-x: hidden !important; */
+  }
+
+  #root {
     overflow-x: hidden;
   }
 }
